--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Dr Alejandro Granados"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Lecturer in Surgical Data Science at King's College London."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
